--- a/app/views/custom/layouts/_header_new.html.erb
+++ b/app/views/custom/layouts/_header_new.html.erb
@@ -18,8 +18,7 @@
       <div class="top-bar">
         <div class="top-bar--title">
           <%= link_to root_path do %>
-            <%= image_tag(image_path_for("logo_header_new.png"), alt: setting["org_name"], class: 'top-bar--title-logo-top') %>
-            <%= image_tag(image_path_for("logo_header_new_sticky.png"), alt: setting["org_name"], class: 'top-bar--title-logo-stikcy') %>
+            <%= image_tag(image_path_for("logo_header_new.png"), alt: setting["org_name"]) %>
           <% end %>
         </div>
 
