--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -240,7 +240,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     width: 100%;
     height: 60px;
     background: transparent;
-    margin-top: 8px;
+    // margin-top: 8px;
 
     ul li {
       margin-right: 0;
