--- a/app/views/custom/shared/_subnavigation_new.html.erb
+++ b/app/views/custom/shared/_subnavigation_new.html.erb
@@ -4,7 +4,7 @@
     <%= render partial: 'shared/subnavigation_projekts_overview', locals: { placement: placement } if Setting['extended_feature.projekts_overview_page_navigation.show_in_navigation'].present? && !launch_page %>
     <%= raw content_block("subnavigation_left_desktop", I18n.locale) if placement == 'desktop' && !launch_page %>
     <%= raw content_block("subnavigation_left_mobile", I18n.locale) if placement == 'mobile' && !launch_page %>
-    <%# <%= render partial: 'shared/subnavigation_projekts', locals: { placement: placement } unless launch_page %>
+    <%= render partial: 'shared/subnavigation_projekts', locals: { placement: placement } unless launch_page %>
     <%= render partial: 'shared/subnavigation_deficiency_reports', locals: { placement: placement } if deficiency_reports_feature?('show_in_main_menu') && !launch_page %>
     <%= raw content_block("subnavigation_right_desktop", I18n.locale) if placement == 'desktop' && !launch_page %>
     <%= raw content_block("subnavigation_right_mobile", I18n.locale) if placement == 'mobile' && !launch_page %>
