--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -95,6 +95,10 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     color: white !important;
   }
 
+  .header--navigation  ul.nav-flyout-block li.nav-element a {
+    color: black !important;
+  }
+
   .main-navigation-item--account--image-wrapper {
     background: white !important;
     color: black !important;
