--- a/app/views/custom/pages/custom_page_new.html.erb
+++ b/app/views/custom/pages/custom_page_new.html.erb
@@ -22,7 +22,7 @@
 
           <% if @custom_page.projekt.present? %>
             <div class="custom-page--banner-description">
-              <%= @custom_page.projekt.description %>
+              <%= @custom_page.subtitle %>
             </div>
           <% end %>
         </div>
