--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -107,7 +107,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
   .locale .locale-form select {
     background: white !important;
     color: black !important;
-    transition: all 200ms ease;
+    // transition: all 200ms ease;
   }
 
   .locale .locale-form {
@@ -118,7 +118,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
 
   .top-bar-wrapper {
     .top-bar-background-wrapper {
-      transition: all 200ms ease;
+      // transition: all 200ms ease;
     }
   }
 
