--- a/app/assets/stylesheets/custom_design_v2/pages/projekts/_projekt_overview.scss
+++ b/app/assets/stylesheets/custom_design_v2/pages/projekts/_projekt_overview.scss
@@ -5,6 +5,8 @@
   .projekts-overview-page--title {
     font-size: 40px;
     font-weight: 500;
+    margin-bottom: 15px;
+    line-height: 1;
   }
 
   .projekts-overview-page--projekts-list {
