--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -222,7 +222,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
   .top-bar {
     height: 150px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     padding-top: 18px;
     justify-content: flex-start !important;
     background: transparent !important;
