--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -116,10 +116,10 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     }
   }
 
-  .top-bar-wrapper {
-    .top-bar-background-wrapper {
-      // transition: all 200ms ease;
-    }
+  .top-bar-background-wrapper {
+    height: 150px;
+
+    // transition: all 200ms ease;
   }
 
   .sticky-header {
@@ -131,11 +131,12 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     z-index: 1000;
 
     .top-bar {
-      height: 100px;
+      // height: 100px;
     }
 
     .top-bar-background-wrapper {
       background: transparent !important;
+      height: 100px;
     }
 
     .top-bar--title-logo-top {
@@ -220,7 +221,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
 
 
   .top-bar {
-    height: 150px;
+    // height: 150px;
     display: flex;
     align-items: center;
     padding-top: 18px;
