--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -12,7 +12,16 @@
   }
 
   .hader--subnavigation-wrapper {
+    .flyout-item-name a, .flyout-item-name {
+      line-height: 3rem !important;
+      font-weight: normal !important;
+    }
+  }
+
+  .hader--subnavigation-wrapper {
     width: 100%;
+    display: flex;
+    align-items: center;
   }
 
   .homepage-image-header {
