--- a/app/assets/stylesheets/custom_design_v2/_sidebar.scss
+++ b/app/assets/stylesheets/custom_design_v2/_sidebar.scss
@@ -81,6 +81,7 @@
   }
 
   .sidebar-card {
+    position: relative;
     background: white;
     border-radius: 10px;
     // border: 1px solid #D9D9D9;
@@ -88,6 +89,11 @@
     margin-bottom: 15px;
     color: $main-text-color;
     font-size: 14px;
+  }
+
+  .sidebar-card--separator {
+    position: relative;
+    border-top: 1px solid #D9D9D9;
   }
 
   .sidebar {
