--- a/app/views/custom/pages/_sidebar_new.html.erb
+++ b/app/views/custom/pages/_sidebar_new.html.erb
@@ -2,107 +2,73 @@
   <% show_admin_controlls = (current_user && current_user.email.in?(@partner_emails) || current_user.present? && current_user.administrator? ||  current_user.present? && current_user.projekt_manager? || current_user.present? && (current_user.administrator? || (current_user.projekt_manager? && can?(:edit, @projekt)))) %>
 
   <% if show_admin_controlls %>
-    <div class="sidebar-card">
-      <div class="sidebar-card--section">
-        <h4 class="sidebar-card--header">
-          <i class="fas fa-cog"></i>
-          Administration
-        </h4>
+    <%= render Shared::SidebarCardComponent.new(title: "Administration", icon_name: "cog") do |c| %>
+      <% c.body do %>
         <%= render partial: 'pages/sidebar/admin_controls' %>
-      </div>
-    </div>
+      <% end %>
+    <% end %>
   <% end %>
 
   <% content_block_sidebar_name = "projekt_page_sidebar_#{projekt.id}" %>
 
-  <% if show_custom_projekt_content_block?(content_block_sidebar_name, @projekt) %>
-    <div class="sidebar-card">
-      <div class="sidebar-card--section">
-        <h4 class="sidebar-card--header">
-          <i class="fas fa-info-circle"></i>
-          Information
-        </h4>
+  <% if show_custom_projekt_content_block?(content_block_sidebar_name, projekt) %>
+    <%= render Shared::SidebarCardComponent.new(title: "Information", icon_name: "info-circle") do |c| %>
+      <% c.body do %>
         <%= render_custom_block "projekt_page_sidebar_#{projekt.id}" %>
-      </div>
-    </div>
-  <% end %>
-
-  <% if projekt_feature?(@custom_page.projekt, "sidebar.show_phases_in_projekt_page_sidebar") %>
-    <div class="sidebar-card">
-      <div class="sidebar-card--section">
-        <h4 class="sidebar-card--header">
-          <i class="fas fa-pager"></i>
-          Phasen
-        </h4>
-        <%= render Pages::Projekts::SidebarPhasesNewComponent.new(projekt) %>
-      </div>
-    </div>
-  <% end %>
-
-  <% if projekt_feature?(@custom_page.projekt, 'general.enable_sdgs') %>
-    <% if projekt.sdg_goals.any? %>
-      <div class="sidebar-card">
-        <div class="sidebar-card--section">
-          <h4 class="sidebar-card--header">
-            <i class="fas fa-tag"></i>
-            SDGS
-          </h4>
-          <%= render partial: 'pages/sidebar/sdgs_new', locals: { projekt: projekt } %>
-        </div>
-      </div>
+      <% end %>
     <% end %>
   <% end %>
 
-  <% if projekt_feature?(@custom_page.projekt, 'general.enable_tags') %>
-    <div class="sidebar-card">
-      <div class="sidebar-card--section">
-        <h4 class="sidebar-card--header">
-          <i class="fas fa-tag"></i>
-          Tags
-        </h4>
+  <% if projekt_feature?(projekt, "sidebar.show_phases_in_projekt_page_sidebar") %>
+    <%= render Shared::SidebarCardComponent.new(title: "Phasen", icon_name: "pager") do |c| %>
+      <% c.body do %>
+        <%= render Pages::Projekts::SidebarPhasesNewComponent.new(projekt) %>
+      <% end %>
+    <% end %>
+  <% end %>
+
+  <% if projekt_feature?(projekt, 'general.enable_sdgs') && projekt.sdg_goals.any? %>
+    <%= render Shared::SidebarCardComponent.new(title: 'SDGS', icon_name: "tag") do |c| %>
+      <% c.body do %>
+        <%= render partial: 'pages/sidebar/sdgs_new', locals: { projekt: projekt } %>
+      <% end %>
+    <% end %>
+  <% end %>
+
+  <% if projekt_feature?(projekt, 'general.enable_tags') %>
+    <%= render Shared::SidebarCardComponent.new(title: 'Tags', icon_name: "tag") do |c| %>
+      <% c.body do %>
         <%= render partial: 'pages/sidebar/tags_new', locals: { projekt: projekt } %>
-      </div>
-    </div>
+      <% end %>
+    <% end %>
   <% end %>
 
   <% if projekt_feature?(projekt, 'sidebar.show_map') %>
-    <div class="sidebar-card">
-      <div class="sidebar-card--section">
-        <h4 class="sidebar-card--header">
-          <i class="fas fa-map"></i>
-          Karte
-        </h4>
+    <%= render Shared::SidebarCardComponent.new(title: 'Karte', icon_name: "map") do |c| %>
+      <% c.body do %>
         <%= render Pages::Projekts::SidebarMapNewComponent.new(projekt, @default_phase_name) %>
-      </div>
-    </div>
+      <% end %>
+    <% end %>
   <% end %>
 
-  <% if projekt_feature?(@custom_page.projekt, "sidebar.show_navigator_in_projekts_page_sidebar") %>
-    <div class="sidebar-card">
-      <div class="sidebar-card--section">
-        <h4 class="sidebar-card--header">
-          <i class="fas fa-list-alt"></i>
-          Aufbau
-        </h4>
+  <% if projekt_feature?(projekt, "sidebar.show_navigator_in_projekts_page_sidebar") %>
+    <%= render Shared::SidebarCardComponent.new(title: 'Aufbau', icon_name: "list-alt") do |c| %>
+      <% c.body do %>
         <%= render partial: 'pages/sidebar/projekt_list', locals: { projekts: [projekt.top_parent], current_projekt: projekt } %>
-      </div>
-    </div>
+      <% end %>
+    <% end %>
   <% end %>
 
-  <% if projekt_feature?(@custom_page.projekt, "sidebar.projekt_page_sharing") %>
-    <div class="sidebar-card">
-      <div class="sidebar-card--section">
-        <h4 class="sidebar-card--header">
-          <i class="fas fa-share-alt"></i>
-          Teilen
-        </h4>
+  <% if projekt_feature?(projekt, "sidebar.projekt_page_sharing") %>
+    <%= render Shared::SidebarCardComponent.new(title: 'Teilen', icon_name: "share-alt") do |c| %>
+      <% c.body do %>
         <%= render "shared/social_share",
             title: projekt.page.title,
             url: url_for(only_path: false),
             description: strip_tags(projekt.page.content || '')[0..200] + '...',
             mobile: projekt.page.title
         %>
-      </div>
-    </div>
+      <% end %>
+    <% end %>
   <% end %>
 </div>
