--- a/app/assets/stylesheets/custom_design_v2/pages/projekts/_custom_page.scss
+++ b/app/assets/stylesheets/custom_design_v2/pages/projekts/_custom_page.scss
@@ -99,6 +99,7 @@
     padding-top: 90px;
     padding-bottom: 40px;
     max-width: 50%;
+    flex-grow: 1;
   }
 
   .custom-page--banner-text-section {
