--- a/app/views/custom/pages/custom_page_new.html.erb
+++ b/app/views/custom/pages/custom_page_new.html.erb
@@ -43,7 +43,7 @@
           <%= image_tag(url_for(@custom_page.image.attachment), class: "custom-page--banner-image" )  %>
         <% end %>
       </div>
-    </div
+    </div>
   <% end %>
 
   <div class="d-flex u-flex-container">
